--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,11 +12,10 @@ import LinkButton from "@components/LinkButton.astro";
   <main id="main-content">
     <div class="not-found-wrapper">
       <h1>404</h1>
-      <span aria-hidden="true">¯\_(ツ)_/¯</span>
       <p>Page Not Found</p>
       <LinkButton
         href="/"
-        className="my-6 text-lg underline decoration-dashed underline-offset-8"
+        className="my-6 text-lg underline  underline-offset-8"
       >
         Go back home
       </LinkButton>
