--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,15 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         </svg>
         <span class="sr-only">RSS Feed</span>
       </a>
-      <div>
-        Welcome to CodeLog, a tech blog driven by a passion for software engineering.
+      <div class="text-lg">
+
+        <p>
+          Welcome to CodeLog, a tech blog by Yevhen, driven by a passion for software engineering and innovation.
+        </p>
+
+        <p>
+          At CodeLog, I share insights, lessons, and best practices from my journey in the software development world. Whether you’re building modern web applications, exploring new frameworks, or seeking ways to improve your development process, this blog is a space for developers of all levels to learn, grow, and be inspired.
+        </p>
       </div>
     </section>
 
