--- a/src/layouts/ProjectsLayout.astro
+++ b/src/layouts/ProjectsLayout.astro
@@ -17,12 +17,10 @@ const { frontmatter } = Astro.props;
 
 <Layout title={`${frontmatter.title} | ${SITE.title}`}>
   <Header activeNav="projects" />
-  <Breadcrumbs />
-  <main id="main-content">
-    <section id="projects" class="prose mb-28 max-w-3xl prose-img:border-0">
-      <h1 class="text-2xl tracking-wider sm:text-3xl">{frontmatter.title}</h1>
-      <slot />
-    </section>
+  <main class="prose">
+    <h1 class="text-2xl tracking-wider sm:text-3xl pt-6">{frontmatter.title}</h1>
+    <slot />
+    <div class="pt-12"></div>
   </main>
   <Footer />
 </Layout>
