--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,6 +1,6 @@
 ---
 import { SOCIALS } from "@config";
-import LinkButton from "./LinkButton.astro";
+import LinkButton from "./LinkButton";
 import socialIcons from "@assets/socialIcons";
 
 export interface Props {
@@ -15,8 +15,8 @@ const { centered = false } = Astro.props;
     SOCIALS.filter(social => social.active).map(social => (
       <LinkButton
         href={social.href}
-        className="link-button"
         title={social.linkTitle}
+        className="hover:text-accent"
       >
         <Fragment set:html={socialIcons[social.name]} />
         <span class="sr-only">{social.linkTitle}</span>
