--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -137,6 +137,8 @@ const structuredData = {
     <script is:inline src="/toggle-theme.js" async></script>
   </head>
   <body>
-    <slot />
+    <div class="mx-auto flex min-h-dvh w-full max-w-3xl flex-col px-4 sm:px-6">
+      <slot />
+    </div>
   </body>
 </html>
