--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -4,7 +4,7 @@ import Main from "@layouts/Main.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
 import Pagination from "@components/Pagination.astro";
-import Card from "@components/Card";
+import Card from "@components/PostCard";
 import { SITE } from "@config";
 import type { Page } from "astro";
 import type { CollectionEntry } from "astro:content";
@@ -27,8 +27,6 @@ const { page } = Astro.props;
       }
     </ul>
   </Main>
-
   <Pagination {page} />
-
   <Footer noMarginTop={page.lastPage > 1} />
 </Layout>
