--- a/src/layouts/TagPosts.astro
+++ b/src/layouts/TagPosts.astro
@@ -3,7 +3,7 @@ import Layout from "@layouts/Layout.astro";
 import Main from "@layouts/Main.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
-import Card from "@components/Card";
+import Card from "@components/PostCard";
 import Pagination from "@components/Pagination.astro";
 import { SITE } from "@config";
 import type { Page } from "astro";
@@ -19,7 +19,7 @@ const { page, tag, tagName } = Astro.props;
 ---
 
 <Layout title={`Tag: ${tagName} | ${SITE.title}`}>
-  <Header activeNav="tags" />
+  <Header activeNav="posts" />
   <Main
     pageTitle={[`Tag:`, `${tagName}`]}
     titleTransition={tag}
