--- a/src/pages/archives/index.astro
+++ b/src/pages/archives/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getCollection } from "astro:content";
-import Card from "@components/Card";
+import Card from "@components/PostCard";
 import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import { SITE } from "@config";
