--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,132 +1,136 @@
+@import "./typograhy.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root,
-  html[data-theme="light"] {
-    --color-fill: rgb(230, 230, 230);
-    --color-text-base: rgb(29, 29, 29);
-    --color-accent: rgba(199, 11, 99, 1);
-    --color-card: rgba(230, 230, 230, 1);
-    --color-card-muted: rgba(205, 205, 205, 1);
-    --color-border: rgb(210, 210, 210);
-  }
-  html[data-theme="dark"] {
-    --color-fill: rgba(33, 39, 49, 1);
-    --color-text-base: rgba(234, 237, 243, 1);
-    --color-accent: rgba(224, 11, 99, 1);
-    --color-card: rgba(52, 63, 96, 1);
-    --color-card-muted: rgba(138, 51, 2, 1);
-    --color-border: rgba(224, 11, 99, 1);
-  }
-  #sun-svg,
-  html[data-theme="dark"] #moon-svg {
-    display: none;
-  }
-  #moon-svg,
-  html[data-theme="dark"] #sun-svg {
-    display: block;
-  }
-  body {
-    @apply flex min-h-[100dvh] flex-col bg-skin-fill font-mono text-skin-base;
-  }
-  section,
-  footer {
-    @apply mx-auto max-w-3xl px-4;
-  }
-  a {
-    @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
-  }
-  svg {
-    @apply inline-block h-6 w-6 fill-skin-base group-hover:fill-skin-accent;
-  }
-  svg.icon-tabler {
-    @apply inline-block h-6 w-6 scale-125 fill-transparent stroke-current stroke-2 opacity-90 group-hover:fill-transparent sm:scale-110;
-  }
-  .prose {
-    @apply !text-base prose-headings:!mb-3 prose-headings:!text-skin-base prose-h3:italic prose-p:!text-skin-base prose-a:!text-skin-base prose-a:!decoration-dashed prose-a:underline-offset-8 hover:prose-a:text-skin-accent prose-blockquote:!border-l-skin-accent prose-blockquote:opacity-80 prose-figcaption:!text-skin-base prose-figcaption:opacity-70 prose-strong:!text-skin-base prose-code:rounded prose-code:bg-skin-card prose-code:p-1 prose-code:before:!content-none prose-code:after:!content-none prose-ol:!text-skin-base prose-ul:overflow-x-clip prose-ul:!text-skin-base prose-li:marker:!text-skin-accent prose-table:text-skin-base prose-th:border prose-th:border-skin-line prose-td:border prose-td:border-skin-line prose-img:!my-2 prose-img:mx-auto prose-img:border-2 prose-img:border-skin-line prose-hr:!border-skin-line;
-  }
-  .prose a {
-    @apply break-words hover:!text-skin-accent;
-  }
-  .prose p {
-    line-height: 1.5;
-    font-size: 18px;
-    font-weight: 300;
-  }
-  .prose thead th:first-child,
-  tbody td:first-child,
-  tfoot td:first-child {
-    padding-left: 0.5714286em;
-  }
-  .prose h2#table-of-contents {
-    @apply mb-2;
-  }
-  .prose details {
-    @apply inline-block cursor-pointer select-none text-skin-base;
-  }
-  .prose summary {
-    @apply focus-outline;
-  }
-  .prose h2#table-of-contents + p {
-    @apply hidden;
-  }
-
-  /* ===== scrollbar ===== */
-  html {
-    overflow-y: scroll;
-  }
-
-  /* width */
-  ::-webkit-scrollbar {
-    @apply w-3;
-  }
-
-  /* Track */
-  ::-webkit-scrollbar-track {
-    @apply bg-skin-fill;
-  }
-
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    @apply bg-skin-card;
-  }
-
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    @apply bg-skin-card-muted;
-  }
-
-  /* ===== Code Blocks & Syntax Highlighting ===== */
-  pre:has(code) {
-    @apply border border-skin-line !text-base;
-  }
-  code,
-  blockquote {
-    word-wrap: break-word;
-  }
-
-  pre > code {
-    white-space: pre;
-  }
-
-  /* Apply Dark Theme (if multi-theme specified) */
-  html[data-theme="dark"] pre:has(code),
-  html[data-theme="dark"] pre:has(code) span {
-    color: var(--shiki-dark) !important;
-    background-color: var(--shiki-dark-bg) !important;
-    font-style: var(--shiki-dark-font-style) !important;
-    font-weight: var(--shiki-dark-font-weight) !important;
-    text-decoration: var(--shiki-dark-text-decoration) !important;
-  }
+:root,
+html[data-theme="light"] {
+  --color-fill: rgb(230, 230, 230);
+  --color-text-base: rgb(29, 29, 29);
+  --color-accent: rgba(199, 11, 99, 1);
+  --color-card: rgba(230, 230, 230, 1);
+  --color-card-muted: rgba(205, 205, 205, 1);
+  --color-border: rgb(210, 210, 210);
+}
+html[data-theme="dark"] {
+  --color-fill: rgba(33, 39, 49, 1);
+  --color-text-base: rgba(234, 237, 243, 1);
+  --color-accent: rgba(224, 11, 99, 1);
+  --color-card: rgba(52, 63, 96, 1);
+  --color-card-muted: rgba(138, 51, 2, 1);
+  --color-border: rgba(224, 11, 99, 1);
 }
 
-@layer components {
-  .display-none {
-    @apply hidden;
+#sun-svg,
+html[data-theme="dark"] #moon-svg {
+  display: none;
+}
+
+#moon-svg,
+html[data-theme="dark"] #sun-svg {
+  display: block;
+}
+
+body {
+  @apply flex min-h-[100dvh] flex-col bg-theme-fill text-theme-base;
+}
+
+section,
+footer {
+  @apply mx-auto max-w-3xl;
+}
+a {
+  @apply outline-2 outline-offset-1 outline-theme-fill focus-visible:no-underline focus-visible:outline-dashed;
+}
+
+svg.icon-tabler {
+  @apply inline-block h-6 w-6 scale-125 fill-transparent stroke-current stroke-2 opacity-90 group-hover:fill-transparent sm:scale-110;
+}
+
+/* ===== scrollbar ===== */
+html {
+  overflow-y: scroll;
+}
+
+/* width */
+::-webkit-scrollbar {
+  @apply w-3;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  @apply bg-theme-fill;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  @apply bg-theme-card;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-theme-card-muted;
+}
+
+/* ===== Code Blocks & Syntax Highlighting ===== */
+pre:has(code) {
+  @apply border border-theme-line !text-base;
+}
+code,
+blockquote {
+  word-wrap: break-word;
+}
+
+pre > code {
+  white-space: pre;
+}
+
+/* Apply Dark Theme (if multi-theme specified) */
+html[data-theme="dark"] pre:has(code),
+html[data-theme="dark"] pre:has(code) span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
+}
+
+.focus-outline {
+  @apply outline-2 outline-offset-1 outline-theme-fill focus-visible:no-underline focus-visible:outline-dashed;
+}
+
+.copy-code {
+  @apply absolute -top-3 right-3 rounded bg-theme-card px-2 py-1 text-xs font-medium leading-4 text-theme-base;
+}
+
+.progress-container {
+  @apply fixed top-0 z-10 h-1 w-full bg-theme-fill;
+}
+
+.progress-bar {
+  @apply h-1 w-0 bg-theme-accent;
+}
+
+.heading-link {
+  @apply ml-2 opacity-0 focus:opacity-100 group-hover:opacity-100;
+}
+
+nav.navigation li.active {
+  @apply underline decoration-wavy decoration-2 underline-offset-8 decoration-pink-500 ;
+}
+
+@media (max-width: 639px) {
+  .menu {
+    transition-duration: 350ms;
   }
-  .focus-outline {
-    @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
+
+  .menu.inactive {
+    max-height: 0;
+    padding: 0;
+  }
+
+  .menu.active {
+    max-height: 1000px;
   }
 }
