fix(core): fix styling of pagination component and re-enable href on button link

--- a/src/components/LinkButton.astro
+++ b/src/components/LinkButton.astro
@@ -1,5 +1,5 @@
 ---
-const { className } = Astro.props;
+const { className, ...rest } = Astro.props;
 ---
 
 <a
@@ -7,6 +7,7 @@ const { className } = Astro.props;
     "group inline-block cursor-pointer underline-offset-8 hover:text-theme-accent hover:underline",
     className,
   ]}
+  {...rest}
 >
   <slot />
 </a>
