--- a/src/layouts/About.astro
+++ b/src/layouts/About.astro
@@ -8,7 +8,7 @@ import Layout from "./Layout.astro";
 <Layout title={`About | ${SITE.title}`}>
   <Header activeNav="about" />
   <main>
-    <section id="about" class="prose mb-28 max-w-3xl">
+    <section id="about" class="prose mb-28 max-w-[52rem]">
       <h1 class="pt-6 text-2xl tracking-wider sm:text-3xl">About</h1>
       <p>
         Welcome to CodeLog, a tech blog driven by a passion for software
