--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -72,7 +72,7 @@ const nextPost =
       <Datetime pubDatetime={pubDatetime} modDatetime={modDatetime} />
       <EditPost postId={post.id} />
     </div>
-    <article id="article" class="prose mx-auto mt-8 max-w-3xl">
+    <article id="article" class="prose mx-auto mt-8 max-w-[52rem]">
       <Content />
     </article>
     <ul class="my-8">
