--- a/src/styles/typograhy.css
+++ b/src/styles/typograhy.css
@@ -7,9 +7,7 @@
 }
 
 .prose p {
-  line-height: 1.6;
-  font-size: 18px;
-  font-weight: 300;
+  @apply font-light leading-[1.6] text-[18px] sm:text-[20px];
 }
 .prose thead th:first-child,
 tbody td:first-child,
