--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -137,7 +137,7 @@ const structuredData = {
     <script is:inline src="/scripts/toggle-theme.js" async></script>
   </head>
   <body>
-    <div class="mx-auto flex min-h-dvh w-full max-w-[52rem] flex-col px-6 sm:px-12 bg-theme-card">
+    <div class="card-container">
       <slot />
     </div>
   </body>
