--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -14,6 +14,7 @@ export type Props = StringTitleProp | ArrayTitleProp;
 
 const { props } = Astro;
 ---
+
 <main class="grow">
   {
     "titleTransition" in props ? (
@@ -24,7 +25,9 @@ const { props } = Astro;
         </span>
       </h1>
     ) : (
-      <h1 class="text-2xl tracking-wider sm:text-3xl pt-6 font-bold">{props.pageTitle}</h1>
+      <h1 class="text-2xl tracking-wider sm:text-3xl pt-6 font-bold">
+        {props.pageTitle}
+      </h1>
     )
   }
   <p class="pb-6">{props.pageDesc}</p>
